--- a/style.css
+++ b/style.css
@@ -1,12 +1,54 @@
-td{
-    padding: none;
-    margin: none;
-    font-size: 1px;
-    border: none;
-    width: 5px;
-    height: 5px;
+@import url('https://fonts.cdnfonts.com/css/tex-gyre-heros');
+body {
+    font-family: 'TeXGyreHeros', sans-serif;
+    background-color: black;
+    color: white !important;
+    text-transform: uppercase;
+    text-align: center;
 }
 
-table {
-    border-collapse: collapse;
+button, input {
+    font-family: 'TeXGyreHeros', sans-serif;
+    background: none;
+    border: 2px solid white;
+    color: white;
+    text-transform: uppercase;
+    font-size: 20px;
+    border-radius: 5px;
+    display: block;
+    margin: auto;
+    padding: 12px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+h1 {
+    font-weight: 100;
+}
+
+.placename {
+    font-size: 100px;
+}
+
+.ct-area{
+    fill: black !important;
+    fill-opacity: 1 !important;
+}
+
+#chart1 {
+    background-color: black;
+    max-width: 70%;
+    margin: auto;
+}
+
+
+
+.ct-line {
+    stroke:rgba(255, 255, 255, 1) !important;
+    stroke-width: 1px;
+    transition: opacity 0.6s linear;
+}
+
+.hide {
+    stroke: purple !important;
 }
