--- a/style.css
+++ b/style.css
@@ -30,20 +30,10 @@ h1 {
     font-size: 100px;
 }
 
-.ct-area{
-    fill: black !important;
-    fill-opacity: 1 !important;
-}
 
-#chart1 {
-    background-color: black;
-    position: relative;
-    max-width: 70%;
-    margin: auto;
-    /* transform: scaleX(0); */
-}
 
-.screen {
+
+/* .screen {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -51,13 +41,12 @@ h1 {
     z-index: 2;
     transform-origin: right;
     animation: shrink-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.5s forwards;
-}
+} */
 
 
-.ct-line {
-    stroke:rgba(255, 255, 255, 1) !important;
-    stroke-width: 1px;
-    transition: opacity 0.6s linear;
+.chartcontainer{
+  width: 500px;
+  margin: auto;
 }
 
 .hide {
@@ -86,4 +75,10 @@ h1 {
     to {
       transform: scaleX(0);
     }
+  }
+
+  .bmc-btn {
+    border: 2px solid white !important;
+    border-radius: 6px !important;
+    font-weight: normal !important;
   }
