--- a/style.css
+++ b/style.css
@@ -134,3 +134,23 @@ button:hover {
   display: none;
   padding: 6px 12px;
 }
+
+select {
+  font-family: 'TeXGyreHeros', sans-serif;
+  background: none;
+  border: 2px solid white;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  border-radius: 5px;
+  display: block;
+  margin: auto;
+  padding: 12px;
+  margin-bottom: 20px;
+  text-align: center;
+
+}
+
+option {
+  color: black;
+}
